fix slider being to large on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -96,8 +96,7 @@ section.details {
 
     .carousel-slider {
       background-color: black;
-      height: 30rem;
-      max-height: 100%;
+      aspect-ratio: 1/1;
     }
     video,
     .gatsby-image-wrapper {
@@ -116,7 +115,7 @@ section.details {
     top: 0;
     width: 100%;
     height: 100vh;
-    padding: 4rem;
+    padding: 2rem;
   }
 }
 
